archive/cluster/istio/istio-ingress/istio-gateway/app/private-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-private-gateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http-private
        protocol: HTTP
      hosts:
        - '${DOMAIN_2}'
        - '*.${DOMAIN_2}'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https-private
        protocol: HTTPS
      hosts:
        - '${DOMAIN_2}'
        - '*.${DOMAIN_2}'
      tls:
        credentialName: istio-priv-cert-tls
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
